// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznyAO bBYgMe"
>
  <li
    className="sc-fznKkj kkRayg"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznKkj kkRayg"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznKkj kkRayg"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznyAO bBYgMe"
>
  <li
    className="sc-fznKkj emQqhw"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznKkj emQqhw"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznKkj emQqhw"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
